--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <img src= "veltech logo.jpg"/>
   <div class="login-container">
     <h2>Login</h2>
     <form action="#" method="POST">
