--- a/index.html
+++ b/index.html
@@ -1,70 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Veltech Login</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f7;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-        .login-container {
-            background: white;
-            padding: 30px 40px;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            width: 320px;
-            text-align: center;
-        }
-        .login-container img {
-            width: 150px;
-            margin-bottom: 20px;
-        }
-        .login-container h2 {
-            margin-bottom: 25px;
-            color: #333;
-        }
-        .login-container input[type="text"],
-        .login-container input[type="password"] {
-            width: 100%;
-            padding: 12px 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 15px;
-        }
-        .login-container button {
-            width: 100%;
-            padding: 12px;
-            background-color: #0077cc;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .login-container button:hover {
-            background-color: #005fa3;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Veltech College Login</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f2f2f2;
+      text-align: center;
+      padding-top: 50px;
+    }
+    .login-container {
+      background-color: #fff;
+      padding: 30px;
+      margin: auto;
+      width: 300px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 8px;
+    }
+    .login-container img {
+      width: 150px;
+      margin-bottom: 20px;
+    }
+    .login-container input[type="text"],
+    .login-container input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    .login-container input[type="submit"] {
+      background-color: #004080;
+      color: white;
+      padding: 10px;
+      width: 100%;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    .login-container input[type="submit"]:hover {
+      background-color: #003366;
+    }
+  </style>
 </head>
 <body>
-    <div class="login-container">
-        <!-- Replace the src below with the actual Veltech logo URL or path -->
-        <img src="logo vtu.png" />
-        <h2>Login to Veltech</h2>
-        <form>
-            <input type="text" placeholder="Username" required />
-            <input type="password" placeholder="Password" required />
-            <button type="submit">Login</button>
-        </form>
-    </div>
+
+  <div class="login-container">
+    <img src="veltech-image.jpg" alt="Veltech Logo">
+    <h2>College Login</h2>
+    <form action="/login" method="post">
+      <input type="text" name="username" placeholder="Username" required><br>
+      <input type="password" name="password" placeholder="Password" required><br>
+      <input type="submit" value="Login">
+    </form>
+  </div>
+
 </body>
 </html>
